champlain-view: Fix memory leak in tile_map_set

https://bugzilla.gnome.org/show_bug.cgi?id=764692